--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
 /DQN/__pycache__/
 /DDPG/__pycache__/
 test.py
+checkpoint_actor.pth
+checkpoint_critic.pth
+DDPG\checkpoint_actor.pth
+DDPG\checkpoint_critic.pth
